--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fancybox-polish",
-  "version": "3.3.5",
-  "description": "Polish translation fo Fancybox (newest version). Working with Fancybox 3.2.x and 3.3.x.",
+  "version": "3.5",
+  "description": "Polish translation fo Fancybox (newest version). Working with Fancybox 3.2+",
   "main": "fancybox.i18n.polish.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
