--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "fancybox-polish",
-  "version": "3.5.1",
-  "description": "Polish translation fo Fancybox (newest version). Working with Fancybox 3.2+",
+  "version": "3.5.7",
+  "description": "Polish translation fo Fancybox 3 and above.",
   "main": "fancybox.i18n.polish.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {},
   "peerDependencies": {
-    "@fancyapps/fancybox": ">=3.3"
+    "@fancyapps/fancybox": ">=3.5"
   },
   "repository": {
     "type": "git",
