--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fancybox-polish",
   "version": "3.5.7",
-  "description": "Polish translation fo Fancybox 3 and above.",
+  "description": "Polish translation for Fancybox 3 and above.",
   "main": "fancybox.i18n.polish.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,6 +20,10 @@
     "polish",
     "translation",
     "language",
+    "lightbox",
+    "locale",
+    "pl_pl",
+    "polski",
     "pl"
   ],
   "author": "Qrzysio <krzysiek@chojnowski.us>",
